--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header-menu (playlistStatut)="mouseEnter()"></app-header-menu>
 <div class="menuHandler" (mouseenter)="mouseEnter()"></div>
 <app-playslist-menu (playlistStatut)="mouseOut($event)" *ngIf="playlistMenu"></app-playslist-menu>
-<app-recherche-avancee class="r-avancee"></app-recherche-avancee>
+<!--<app-recherche-avancee class="r-avancee"></app-recherche-avancee>-->
 <div class="router">
   <router-outlet></router-outlet>
 </div>
