--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -1,25 +1,24 @@
-<div class="container-fluid">
-  <div class="row">
+<div class="cont">
+  <div class="container-fluid">
+    <div class="row row1">
+      <div class="col-2 drop-container">
+        <button class="drop" (click)="mouseEnter()"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
+      </div>
 
-    <div class="col-2 drop-container">
-      <button class="drop" (click)="mouseEnter()"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
+      <div class="col-6 offset-1 form-group search">
+          <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+            <input type="text" class="form-control search-input" placeholder="Rechercher un film, une serie..." name="searchReq" ngModel>
+            <button class="search-button" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+            <div class="lien">
+            <a href="javascript:void(0)" (click)="advanced()">Recherche avancée</a>
+            </div>
+          </form>
+      </div>
+
+      <div class="col-1 offset-2">
+        <div class="user"><a href="javascript:void(0)"><i class="fa fa-user"></i></a></div>
+      </div>
     </div>
-
-    <div class="col-6 offset-1 form-group search">
-        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-          <input type="text" class="form-control search-input" placeholder="Rechercher un film, une serie..." name="searchReq" ngModel>
-          <button class="search-button" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-          <div class="lien">
-          <a >Recherche avancée</a>
-          </div>
-        </form>
-    </div>
-
-    <div class="col-1 offset-2">
-      <div class="user"><a href="#"><i class="fa fa-user"></i></a></div>
-    </div>
-
+    <app-recherche-avancee *ngIf="rechercheAvancee"></app-recherche-avancee>
   </div>
-
 </div>
-
