--- a/src/app/header-menu/header-menu.component.css
+++ b/src/app/header-menu/header-menu.component.css
@@ -1,10 +1,12 @@
-.row {
+.cont {
+  -webkit-box-shadow: 0px 19px 18px -11px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 19px 18px -11px rgba(0,0,0,0.75);
+  box-shadow: 0px 19px 18px -11px rgba(0,0,0,0.75);
+  min-width: 850px;
+}
+.row1 {
   height: 58px;
   padding-top: 9px;
-  min-width: 850px;
-  -webkit-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
-  box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
 }
 .drop {
   min-width: 110px;
